# ChaosBench

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  ROADMAP.md  database.db
agent/: Cargo.toml
agent/src/: api.rs  common.rs  db.rs  logging.rs  main.rs  reg.rs  state.rs  stopper.rs  sys_info.rs
agent/src/actions/: download.rs  execute.rs  installation.rs  machine.rs  mod.rs  service.rs  upload.rs  wait.rs  watchlog.rs  workspace.rs
agent/src/actions/dns/: mod.rs
agent/src/actions/installation/: linux.rs  mod.rs  win.rs
agent/src/actions/machine/: linux.rs  win.rs
agent/src/actions/metrics/: linux.rs  mod.rs  win.rs
agent/src/actions/service/: linux.rs  mod.rs  win.rs
agent/src/services/: linux.rs  mod.rs  win.rs
agent/src/sys_info/: linux.rs  mod.rs  win.rs
agent/wix/: main.wxs
common/: Cargo.toml
common/src/: basic_scenario.yaml  common.rs  err.rs  lib.rs  parameters.rs  phase.rs  scenario.rs  tasks.rs  variables.rs
common/src/action/: dns.rs  download.rs  execute.rs  install.rs  metrics.rs  mod.rs  names.rs  service.rs  upload.rs  wait.rs  watchlog.rs
common/src/api/: agent.rs  mod.rs  user_actions.rs
scenarios/: basic_scenario.yaml
server/: Cargo.toml
server/src/: main.rs  state.rs  utils.rs
server/src/actors/: agent.rs  logs.rs  mod.rs  server.rs  user.rs
server/src/controllers/: agent.rs  mod.rs  proxy.rs  user.rs
server/src/domains/: agent.rs  connection.rs  mod.rs  scenario.rs  server.rs  tasks.rs
server/src/repository/: memory.rs
server/src/services/: mod.rs  production.rs
server/src/telemetry/: mod.rs
user/: Cargo.toml
user/src/: main.rs
xtask/: Cargo.toml
xtask/src/: main.rs  params.rs  version.rs
xtask/src/testing/: mod.rs
