[workspace]
members = [
    "agent", 
    "common", "server", "user",
    "xtask",
]
resolver = "2"
default-members = ["agent", "common"]

[workspace.package]
name = "chaos-bench"
version = "0.1.0"
authors = ["Samuel Garces<samuel.garces@protonmail.com>"]
edition = "2021"
repository = "https://github.com/SecSamDev/ChaosBench.git"

[workspace.dependencies]
anyhow = "*"
serde = { version = "1", features = ["derive"]}
serde_json = { version = "1" }
serde_yaml = "0"
tungstenite = { version = "0.21.0", features = ["__rustls-tls"]}
reqwest = {version = "0.11.26", default-features=false, features = ["rustls-tls", "rustls-tls-manual-roots", "blocking"]}
rustls = {version = "0.22", default-features = false, features = ["tls12", "ring"]}
rustls-pemfile = "2"