[package]
name = "chaoscli"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chaos-core = { "path" = "../common" }
websocket = {version = "0.27.0", default_features = false, features = ["sync"]}
serde_json = {workspace = true}