[package]
name = "chaoscli"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chaos-core = { "path" = "../common" }
tungstenite = {workspace = true}
serde_json = {workspace = true}
dialoguer = {version = "0.11", features = ["history", "completion"]}