[package]
name = "chaoscli"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chaos-core = { "path" = "../common" }
tungstenite = {workspace = true}
serde_json = {workspace = true}
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
ratatui = "0.26.1"
crossterm = "0.27.0"